# test_releases

./: .coveragerc  README.md  pyproject.toml  requirements.txt  requirements_ci.txt  setup.cfg  test.py  tox.ini
.github/workflows/: pythonapp.yml
docs/diagrams/: general.uml  model.uml
src/white_app_python/: my_class.py
src/white_app_python/component/: __init__.py  subcomponent.py
src/whiteapp_python/: my_class.py
src/whiteapp_python/component/: __init__.py  component.py
tests/: test_myclass.py
