[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=3.4"]
build-backend = "setuptools.build_meta"


[project]
name = "whiteapp_python"
description = "whiteapp python"
version = "0.1.0"
# requires-python = ">=3.10.8"
requires-python = ">=3.11.0"
readme = "README.md"

dependencies = [
# Syntax for dependencies version
#  "tomli",
#  "tomli == 1.0.0",
#  "tomli <= 1.0.0",
# "tomli >= 1.0.0",
]

[project.optional-dependencies]
# Can be installed with pip install .[ci]
ci = ["pytest", "flake8", "black", "tox", "build", "coverage"]

[tool.semantic_release]
version_variable = "pyproject.toml:version"